# penny-for-your-thoughts

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: currencies.rs  currency_map.rs  exchange.rs  formatter.rs  formatting.rs  iso_currencies.rs  lib.rs
