[package]
name = "doubloon"
version = "3.1.0"
edition = "2021"
license = "MIT"
description = "Money datatype that supports both statically and dynamically typed currencies"
repository = "https://github.com/davestearns/penny-for-your-thoughts"
keywords = ["money", "currency"]
categories = ["data-structures"]

[dependencies]
icu = { version = "2.1.1", features = ["experimental"], optional = true }
rust_decimal = { version = "1.35.0", features = ["maths"] }
serde = { version = "1.0.206", optional = true }
thiserror = "1.0.63"
tinystr = { version = "0.8.2", optional=true }

[features]
serde = ["dep:serde"]
formatting = ["icu", "tinystr"]

[dev-dependencies]
serde_json = "1.0.122"

[package.metadata.docs.rs]
all-features = true